jobChildren과 categoryChildren을 List로 받게 변경하여서 mapper와 repoImpl를 refactor하고 있습니다.